# advent-of-code

./: Cargo.toml  README.md  main.sh
2015/: Cargo.toml
2015/src/: day01.rs  day02.rs  lib.rs
2019/day1/: Cargo.toml
2019/day1/input/: day1.txt
2019/day1/src/: main.rs
2019/day2/: Cargo.toml
2019/day2/input/: day2.txt
2019/day2/src/: main.rs
2019/day3/: Cargo.toml
2019/day3/input/: day3.txt
2019/day3/src/: main.rs
2019/day4/: Cargo.toml
2019/day4/src/: main.rs
2019/day5/: Cargo.toml
2019/day5/input/: day5.txt
2019/day5/src/: main.rs
2019/day6/: Cargo.toml
2020/: Cargo.toml  main.sh
2020/benches/: bench.rs
2020/inputs/: day01.txt
2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  lib.rs  main.rs
2021/: Cargo.toml  main.sh
2021/benches/: bench.rs
2021/inputs/: day03.txt  day16.txt  day18.txt  day20.txt
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  lib.rs  main.rs
2022/: Cargo.toml  main.sh
2022/benches/: bench.rs
2022/inputs/: day05.txt
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day21.rs  lib.rs  main.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  lib.rs  main.rs
(+2 files in other folders)
